# src/routes/worker.routes.js
@@ -8,6 +8,7 @@ const {
   getWorkerById,
   updateWorker,
   deleteWorker,
+  hardDeleteWorker,
   getWorkerByCard,
   uploadWorkerPhoto,
   deleteWorkerPhoto,
@@ -20,7 +21,8 @@ router.get('/', getAllWorkers);
 router.post('/', requireFields(['full_name', 'rfid_card_uid', 'role_id']), createWorker);
 router.get('/:id', getWorkerById);
 router.put('/:id', updateWorker);
-router.delete('/:id', deleteWorker);
+router.delete('/:id', deleteWorker);          // soft delete (deactivate + clear RFID)
+router.delete('/:id/permanent', hardDeleteWorker); // hard delete (removes from DB + R2 photo)
 router.post('/:id/photo', upload.single('photo'), uploadWorkerPhoto);
 router.delete('/:id/photo', deleteWorkerPhoto);
 
